Add link to 'shepherds-pie.html'

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Tasty Recipes</h1>
+        <a href="./recipes/shepherds-pie.html">Shepherd's Pie</a>
     </body>
 </html>
