Add image of shepherds pie and description
Add image of a shepherd's pie and add a short description of the
shepherds pie recipe.

--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -7,5 +7,13 @@
 
     <body>
         <h1>Shepherd's Pie</h1>
+
+        <img src="../img/shepherdspie.jpg" alt="A freshly cooked Shepherd's Pie" width="256" height="192">
+
+        <h2>Description</h2>
+        <p>A classic British and Irish dish that’s loved the world over, shepherd’s pie is the ultimate comfort food.</p>
+        
+        <p>Made with lamb mince, a rich gravy and buttery, creamy mashed potatoes, this recipe has all the elements for a perfect slow Sunday dinner and is on the table in just over an hour.</p>
+
     </body>
 </html>
