--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -12,8 +12,39 @@
 
         <h2>Description</h2>
         <p>A classic British and Irish dish that’s loved the world over, shepherd’s pie is the ultimate comfort food.</p>
-        
+
         <p>Made with lamb mince, a rich gravy and buttery, creamy mashed potatoes, this recipe has all the elements for a perfect slow Sunday dinner and is on the table in just over an hour.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 tbsp olive oil</li>
+            <li>1 brown onion, halved, finely chopped</li>
+            <li>1 carrot, peeled, finely chopped</li>
+            <li>2 celery sticks, trimmed, finely chopped</li>
+            <li>1 tbsp Coles Tomato Paste</li>
+            <li>500g lamb mince</li>
+            <li>Salt & freshly ground black pepper</li>
+            <li>2 tbsp plain flour</li>
+            <li>500ml (2 cups) Massel beef style stock</li>
+            <li>1 tbsp worcestershire sauce</li>
+            <li>1 bay leaf</li>
+            <li>4 (about 200g each) desiree potatoes, peeled, chopped</li>
+            <li>40g butter</li>
+            <li>125ml (1/2 cup) milk</li>
+            <li>Melted butter, to brush</li>
+        </ul>
+
+
+        <h2>Method</h2>
+        <ol>
+            <li>Heat <strong>1 tbsp olive oil</strong> in a large saucepan over medium-high heat. <strong>Add 1 brown onion, halved, finely chopped, 1 carrot, peeled, finely chopped</strong> and <strong>2 celery sticks, trimmed, finely chopped</strong> and cook, stirring, for 5 minutes or until soft. Add <strong>500g lamb mince</strong> and cook, stirring to break up any lumps, for 5 minutes or until lamb changes colour.</li>
+            <br>
+            <li>Add the <strong>2 tbsp plain flour</strong> and cook, stirring, for 2 minutes or until combined. Add <strong>500ml (2 cups) Massel beef style stock, 1 bay leaf, 1 tbsp worcestershire sauce</strong> and <strong>1 tbsp Coles Tomato Paste</strong>. Bring to the boil. Reduce heat to low and cook, stirring occasionally, for 30 minutes or until sauce thickens. Taste and season with <strong>salt & freshly ground black pepper</strong>.</li>
+            <br>
+            <li>Meanwhile: cook <strong>4 (about 200g each) desiree potatoes, peeled, chopped</strong> in a saucepan of salted boiling water for 15 minutes or until tender. Drain well. Return to the pan with the <strong>40g butter</strong>. Use a potato masher or fork to mash until smooth. Add <strong>125ml (1/2 cup) milk</strong> and use a wooden spoon to stir until combined. Taste and season with salt and pepper.</li>
+            <br>
+            <li>Preheat oven to 200C. Spoon lamb mixture into a 2L (8-cup) capacity ovenproof baking dish, or use four individual ovenproof serving dishes. Top with mashed potato and use a fork to spread over lamb mixture. Brush with <strong>melted butter</strong>. Bake in preheated oven for 20 minutes or until mashed potato is golden brown. Serve immediately.</li>
+        </ol>
 
     </body>
 </html>
