Add image, description, ingredients and method

--- a/recipes/beef-pad-see-ew.html
+++ b/recipes/beef-pad-see-ew.html
@@ -7,5 +7,32 @@
 
     <body>
         <h1>Beef Pad See Ew</h1>
+
+        <img src="../img/beefpad.jpg" alt="A delicious and freshly cooked Beef Pad See Ew, using only five ingredients." width="256" height="192">
+
+        <h2>Description</h2>
+        <p>With just 15 minutes and 5-ingredients you can be serving this quick and tasty homemade beef pad see ew for dinner tonight. </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>340g packet thick egg noodles</li>
+            <li>500g beef rump steak, thinly sliced</li>
+            <li>600g packet rainbow stir-fry mix</li>
+            <li>205g packet pad see ew cooking sauce</li>
+            <li>Coriander sprigs</li>
+        </ul>
+
+        <h2>Method</h2>
+
+        <ol>
+            <li>Cook the <stong>340g packet thick egg noodles</stong> in a large saucepan of boiling water for 4 mins or until tender. Drain well. </li>
+            <br>
+            <li>Meanwhile, heat a wok or large non-stick frying pan over high heat. Add half the <strong>500g beef rump steak, thinly sliced</strong> and <strong>600g packet rainbow stir-fry mix</strong> for 1-2 mins or until just cooked through. Transfer to a plate. Repeat with the remaining beef. </li>
+            <br>
+            <li>Return the beef to the wok or pan with the stir-fry mix and add <strong>205g packet pad see ew cooking sauce</strong>. Stir-fry for 2-3 mins or until the vegetables are tender and the mixture is heated through. Season.</li>
+            <br>
+            <li>Divide the beef mixture among serving bowls. Season. Sprinkle with chilli flakes from the pad see ew packet and <strong>coriander sprigs</strong> to serve.</li>
+        </ol>
+
     </body>
 </html>
