--- a/recipes/cheesy-meatball-sausage-roll.html
+++ b/recipes/cheesy-meatball-sausage-roll.html
@@ -7,5 +7,28 @@
 
     <body>
         <h1>Cheesy Meatball Sausage Rolls</h1>
+
+        <img src="../img/meatball.jpg" alt="A delicious cheesy meatball sausage roll made with a sausage roll maker" width="256" height="160">
+
+        <h2>Description</h2>
+        <p>A filling snack in under 25 minutes is ideal for hungry hordes. The kids will love this imaginative, delicious spin on meatballs. </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>4 x 20cm round wraps</li>
+            <li>12 (240g) small pork & beef meatballs</li>
+            <li>2 tbsp heated pizza sauce</li>
+            <li>55g (1/2 cup) grated mozzarella</li>
+            <li>Basil leaves (optional)</li>
+        </ul>
+
+        <h2>Method</h2>
+        <ol>
+            <li>Place 3 <strong>small pork & beef meatballs</strong> close together in a row on each one of the <strong>20cm round wraps</strong>, in the centre one-third of the way in from the front edge.</li>
+            <br>
+            <li>Working one at a time, fold the front edge of the wrap over the meatballs, then fold in the sides and roll up to enclose. Spray all over with oil. Place into 1 well of the sausage roll maker seam-side down (it might not fit neatly).</li>
+            <br>
+            <li>Close the lid, turn on the sausage roll maker and cook for 10 minutes. Open the lid and spoon <strong>2 tbsp headted pizza sauce</strong> over the top of each sub. Sprinkle with <strong>55g (1/2 cup) grated mozzarella</strong>. Prop the lid open with the handle of a wooden spoon, to create a gap of about 2cm. Cook for a further 1-2 minutes until the cheese has melted. Season. Serve warm, scattered with <strong>basil leaves</strong>, if using.</li>
+        </ol>
     </body>
 </html>
