--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Tasty Recipes</h1>
-        <a href="./recipes/shepherds-pie.html">Shepherd's Pie</a>
+        <ul>
+            <li><a href="./recipes/shepherds-pie.html">Shepherd's Pie</a></li>
+            <li><a href="./recipes/beef-pad-see-ew.html">Beef Pad See Ew</a></li>
+            <li><a href="./recipes/cheesy-meatball-sausage-roll.html">Cheesy Meatball Sausage Rolls</a></li>
+        </ul>
     </body>
 </html>
