--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <a href="../index.html">Back to Recipe List</a>
         <h1>Shepherd's Pie</h1>
 
         <img src="../img/shepherdspie.jpg" alt="A freshly cooked Shepherd's Pie" width="256" height="192">
