Create CSS and style index.html title

--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Tasty Recipes</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
-        <h1>Tasty Recipes</h1>
-        <ul>
-            <li><a href="./recipes/shepherds-pie.html">Shepherd's Pie</a></li>
-            <li><a href="./recipes/beef-pad-see-ew.html">Beef Pad See Ew</a></li>
-            <li><a href="./recipes/cheesy-meatball-sausage-roll.html">Cheesy Meatball Sausage Rolls</a></li>
-        </ul>
+        <div class="title-div">
+            <h1 class="title">Tasty Recipes</h1>
+        </div>
+        <div>
+            <ul>
+                <li><a href="./recipes/shepherds-pie.html">Shepherd's Pie</a></li>
+                <li><a href="./recipes/beef-pad-see-ew.html">Beef Pad See Ew</a></li>
+                <li><a href="./recipes/cheesy-meatball-sausage-roll.html">Cheesy Meatball Sausage Rolls</a></li>
+            </ul>
+        </div>
     </body>
 </html>
