Add CSS to recipe list

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <div class="title-div">
             <h1 class="title">Tasty Recipes</h1>
         </div>
-        <div>
-            <ul>
+        <div class="recipe-list-div">
+            <ul class="recipe-list">
                 <li><a href="./recipes/shepherds-pie.html">Shepherd's Pie</a></li>
                 <li><a href="./recipes/beef-pad-see-ew.html">Beef Pad See Ew</a></li>
                 <li><a href="./recipes/cheesy-meatball-sausage-roll.html">Cheesy Meatball Sausage Rolls</a></li>
